$listSearchIndexes does not throw when used outside of atlas in 7.2 alpha releases

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.1.1, 7.2.0-rc0, 7.0.3
    • Affects Version/s: None
    • Component/s: None
    • None
    • Minor Change
    • ALL
    • v7.1, v7.0
    • Hide

      Execute `db.bar.getSearchIndexes()` against a 7.2 alpha release.

      Show
      Execute `db.bar.getSearchIndexes()` against a 7.2 alpha release.
    • QI 2023-10-02, QI 2023-10-16
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      https://jira.mongodb.org/browse/SERVER-78831 recently fixed a bug with the $listSearchIndexes aggregation pipeline stage to cause it to throw an error when not connected to an Atlas cluster. Example output from 7.0.1:

      >  db.adminCommand({ buildInfo: 1 }).version
      7.0.1
      > db.bar.getSearchIndexes()
      MongoServerError: PlanExecutor error during aggregation :: caused by :: Search index commands are only supported with Atlas.
      

      There appears to be a regression in the 7.2 alpha releases. This fix is no longer present and $listSearchIndexes returns an empty array when executed against a non-Atlas cluster. Example from 7.2.0-alpha-39-g3e9f147:

      >  db.adminCommand({buildInfo: 1}).version
      7.2.0-alpha-39-g3e9f147
      >  db.bar.getSearchIndexes()
      []
      

       

       

            Assignee:
            Ted Tuckman (Inactive)
            Reporter:
            Bailey Pearson
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: