SERVER-81055 Change listSearchIndexes to throw when run on empty collection if Atlas is not configured

GitOrigin-RevId: 8bc16e7567d4215b2f0683f04e40117290b1eb4f